# ChiScraper

./: .gitignore  Analyser_NER.py  Analyser_TFID.py  CAMS_arxiv_search.py  README.md  RSSHandler.py  RSSParser.py  ai_eval.py  ai_rank_articles.py  analyse.py  app.py  articleDB.py  articles.db.bkp  arxiv_fetch.py  arxiv_search.py  arxivscraper_search_criteria.py  arxivscraper_search_latest.py  config.yaml  crossRefHandler.py  crossrefAPITest.py  demo_filter.py  demo_search.py  doiHandler.py  download_articles.py  fetch_from_arxiv.py  loadAiEvalToDB.py  main.py  pyproject.toml  rank_articles.py  requirements.txt  search.py  search_arxiv.py  search_criteria.py  search_latest.py  search_term.py  summary.md  test_filter.py  toDo.md  tweak_md_files.py
.obsidian/: appearance.json  community-plugins.json  graph.json  types.json  workspace.json
ChiScraper/: main.py
ChiScraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Configs/: FSOC.json  QuantumOptics.json  ai_criteria.txt  ai_rules.txt  demo.json  dynamo.json  galaxy.json  job.json  mhd.json  stars.json  systemPrompt.txt  turb.json  winds.json
MyLibrary/: HelperFuncs.py
configs/: PCF.json  RankingParams.json  ai_guidelines.txt  mhd.json  params.yaml  settings.yaml  user_profile.txt
docs/: aiRanking.md  demo_filter.py  localAIEval.md  searchConfig.md
header/: IO.py  WWArgParse.py  WWArticles.py  WWDates.py
headers/: Directories.py  FileNames.py  IO.py  WWArgParse.py  WWArticles.py  WWDatabase.py  WWFnFs.py
helpFiles/: searchConfig.md
scripts/: analyse.py  download_articles.py  (+4 more)
src/: main.py
(+79 files in other folders)
